--- a/src/components/product.css
+++ b/src/components/product.css
@@ -2,6 +2,7 @@
   flex: 1;
   display: flex;
   justify-content: center;
+  margin-bottom: 30px; 
 }
 
 .product-card {
@@ -21,13 +22,14 @@
 
 .product-image {
   width: 100%;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
 }
 
 .product__content {
   padding: 20px;
   text-align: center;
+  width: 80%;
 }
 
 .product-name {
